--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --clr-primary: #270C41;
+    --clr-primary: #150225;
     --clr-secondary: #4C4452;
-    --clr-neutral: #B2A8B8;
+    --clr-neutral: #ddf7f3;
 }
 
 /* font */
@@ -41,4 +41,14 @@ nav {
 nav > ul {
     align-items: center;
     gap: 5vw;
+}
+
+.carousel__container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 7em;
+}
+
+.card {
+    border: 1px red solid;
 }
