--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 
 body {
     min-height: 100dvh;
+    padding: 1em;
     font-family: "Poppins", sans-serif;
     font-size: 1rem;
     background-color: var(--clr-neutral);
@@ -34,21 +35,44 @@ body {
 nav {
     width: 100%;
     align-items: center;
-    position: fixed;
-    top: 2em;
+}
+
+.logo {
+    width: 20%;
+}
+
+.logo > img {
+    width: 100%;
 }
 
 nav > ul {
-    align-items: center;
     gap: 5vw;
+    margin-inline: auto 5vw;
 }
 
 .carousel__container {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 7em;
+    grid-template-columns: repeat(3, 1fr);
+    gap: .25em;
 }
 
 .card {
+    width: 100%;
     border: 1px red solid;
+    padding: 5vw;
+}
+
+.card > img {
+    width: 100%;
+    object-fit: cover;
+}
+
+
+@media only screen and (max-width: 990px) {
+    nav {
+        flex-direction: column;
+    }
+    nav > ul {
+        margin-inline: auto;
+    }
 }
