--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 :root {
     --clr-primary: #150225;
-    --clr-secondary: #4C4452;
+    --clr-secondary: rgba(107, 141,207,.8);
     --clr-neutral: #ddf7f3;
 }
 
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 /* reset */
 *, *::before, *::after {
     box-sizing: border-box;
@@ -15,64 +16,132 @@
     list-style: none;
 }
 
-/* utility classes */
-.flex {
-    display: flex;
-}
-.column {
-    flex-direction: column;
-}
-
+/* global styles */
 body {
-    min-height: 100dvh;
-    padding: 1em;
     font-family: "Poppins", sans-serif;
+    background: var(--clr-neutral);
     font-size: 1rem;
-    background-color: var(--clr-neutral);
     color: var(--clr-primary);
 }
 
-nav {
+header {
+    background-color: var(--clr-secondary);
+    padding:  3em;
+}
+
+h1 {
     width: 100%;
-    align-items: center;
+    justify-content: center;
+    margin-block: 1em;
+}
+
+h2 {
+    max-width: 30ch;
+    font-size: 1.25em;
+    font-weight: 500;
+}
+
+p {
+    max-width: 35ch;
+    font-size: .75em;
+}
+
+button {
+    padding: 1em 3em;
+    border: 2px solid var(--clr-primary);
+    background: var(--clr-primary);
+    color: white;
+    border-radius: .25em;
+    margin-block: 3em;
+}
+
+a {
+    font-size: 1em;
+    color: var(--clr-primary);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+img {
+    width: 100%;
+}
+
+/* utility classes */
+.flex {display: flex;}
+.column {flex-direction: column;}
+.grid {display: grid;}
+
+
+/* layout styling */
+nav {
+    align-items: flex-end;
+    justify-content: space-between;
 }
 
 .logo {
-    width: 20%;
+    width: 30%;    
 }
 
-.logo > img {
-    width: 100%;
+.nav__links {
+    gap: 1em;
 }
 
-nav > ul {
-    gap: 5vw;
-    margin-inline: auto 5vw;
+/* carousel and wrapper */
+
+.carousel__wrapper {
+    overflow-x: hidden;
+    justify-content: center;
 }
 
-.carousel__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: .25em;
+.carousel {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr;
+    gap: .5em;
 }
 
-.card {
-    width: 100%;
+.carousel__card {
+    width: 12em;
     border: 1px red solid;
-    padding: 5vw;
+    cursor: pointer;
 }
 
-.card > img {
+.scroll__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll__arrow {
+    width: 5em;
+}
+
+.scroll__arrow > svg {
     width: 100%;
-    object-fit: cover;
 }
 
+.scroll__arrow:first-of-type {
+    transform: scaleX(-1);
+}
 
-@media only screen and (max-width: 990px) {
-    nav {
-        flex-direction: column;
-    }
-    nav > ul {
-        margin-inline: auto;
-    }
+/* contact portion of page */
+.contact__container {
+    justify-content: center;
+    padding: 2em 5em;
+}
+
+.contact__content {
+    gap: 1em;
+}
+
+.contact__image {
+    width: 40%;
+    max-height: 524px;
+    border-radius: .5em;
+}
+
+.contact__image > img {
+    object-fit: cover;
+    object-position: bottom;
+    height: 100%;
+    border-radius: inherit;
 }
