--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     --clr-primary: #150225;
     --clr-secondary: rgba(107, 141,207,.8);
     --clr-neutral: #ddf7f3;
+
+    --max-width: 1240px;
 }
 
 /* font */
@@ -47,7 +49,7 @@ p {
 }
 
 button {
-    padding: 1em 3em;
+    padding: 1em 2em;
     border: 2px solid var(--clr-primary);
     background: var(--clr-primary);
     color: white;
@@ -76,7 +78,7 @@ img {
 nav {
     align-items: flex-end;
     justify-content: space-between;
-    max-width: 1240px;
+    max-width: var(--max-width);
     margin-inline: auto;
 }
 
@@ -97,7 +99,7 @@ nav {
 }
 
 .carousel {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
     gap: .5em;
 }
@@ -154,26 +156,23 @@ nav {
 }
 
 /* footer */
-.footer__wrapper {
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 5vw;
+footer {
+    justify-content: center;
     background-color: var(--clr-secondary);
+}
+
+.footer__wrapper {
+    max-width: var(--max-width);
+    gap: 5vw;
     padding: 3em;
 }
 
-.footer__wrapper > form {
-    gap: 1em;
-    height: 13em;
-    background-color: var(--clr-neutral);
-    padding: 2em;
-    border-radius: .25em;
-    text-align: center;
-}
-
 .contact__info {
+    width: min-content;
     gap: 1em;
     position: relative;
+    left: 2em;
+    padding: 2em;
 }
 
 .contact__info > li::before {
@@ -193,4 +192,33 @@ nav {
 }
 .contact__info > li:nth-child(3)::before {
     background-image: url(./images/mail.svg);
+}
+
+.footer__wrapper {
+    justify-content: space-between;
+}
+
+.form__wrapper {
+    gap: 4vw;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.form__wrapper > form {
+    flex: 0 1;
+    height: 15em;
+    justify-content: space-between;
+    background-color: var(--clr-neutral);
+    padding: 2em;
+    border-radius: .25em;
+    text-align: center;
+}
+
+.social__icons {
+    width: 50%;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
