--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
 
 img {
     width: 100%;
+    height: 100%;
 }
 
 /* utility classes */
@@ -83,7 +84,9 @@ nav {
 }
 
 .logo {
-    width: 15em;    
+    width: 10em;
+    height: 4em; 
+    flex-shrink: 0;   
 }
 
 .nav__links {
@@ -101,13 +104,17 @@ nav {
 .carousel {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
-    gap: .5em;
+    gap: 1em;
+    transform: translateX(0)
 }
 
 .carousel__card {
     width: 12em;
-    border: 1px red solid;
     cursor: pointer;
+    border-radius: .5em;
+    overflow: hidden;
+    background-color: white;
+    padding: 1em;
 }
 
 .scroll__wrapper {
@@ -121,7 +128,9 @@ nav {
 }
 
 .scroll__arrow {
-    width: 5em;
+    width: 4em;
+    height: 2em;
+    padding: .25em;
 }
 
 .scroll__arrow > svg {
@@ -134,8 +143,9 @@ nav {
 
 /* about portion of page */
 .about__container {
+    width: 100%;
     justify-content: center;
-    padding: 2em 5em;
+    padding: 2em;
 }
 
 .about__content {
@@ -151,12 +161,12 @@ nav {
 .about__image > img {
     object-fit: cover;
     object-position: bottom;
-    height: 100%;
     border-radius: inherit;
 }
 
 /* footer */
 footer {
+    width: 100%;
     position: relative;
     justify-content: center;
     background-color: var(--clr-secondary);
@@ -164,8 +174,8 @@ footer {
 
 .footer__wrapper {
     max-width: var(--max-width);
-    gap: 5vw;
-    padding: 3em;
+    gap: 10%;
+    padding: 3em 3em 5em;
 }
 
 .contact__info {
@@ -205,7 +215,7 @@ footer {
     justify-content: center;
 }
 
-.form__wrapper > form {
+.contact__form {
     flex: 0 1;
     height: 15em;
     justify-content: space-between;
@@ -219,7 +229,7 @@ footer {
     width: 50%;
     justify-content: space-between;
     position: absolute;
-    bottom: 0;
+    bottom: 2em;
     left: 50%;
     transform: translateX(-50%);
 }
