--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ img {
 nav {
     align-items: flex-end;
     justify-content: space-between;
+    flex-wrap: wrap;
     max-width: var(--max-width);
     margin-inline: auto;
 }
@@ -92,6 +93,17 @@ nav {
 .nav__links {
     gap: 1em;
     justify-content: flex-end;
+}
+
+/* nav toggle */
+.hamburger__link {
+    width: 2em;
+    height: 1.75em;
+}
+
+#burgerParent {
+    width: 100%;
+    height: 100%;
 }
 
 /* carousel and wrapper */
@@ -223,6 +235,7 @@ footer {
     padding: 2em;
     border-radius: .25em;
     text-align: center;
+    gap: 1em;
 }
 
 .social__icons {
@@ -232,4 +245,14 @@ footer {
     bottom: 2em;
     left: 50%;
     transform: translateX(-50%);
+}
+
+@media only screen and (max-width: 700px) {
+    .nav__links {
+        flex-direction: column;
+    }
+    .footer__wrapper {
+        flex-direction: column;
+        gap: 1em;
+    }
 }
