set max width on carousel

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ header {
     padding:  3em;
 }
 
+main {
+    justify-content: center;
+}
+
 h1 {
     width: 100%;
     justify-content: center;
@@ -141,11 +145,12 @@ nav {
 /* carousel and wrapper */
 
 .carousel__wrapper {
-    overflow-x: hidden;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .carousel {
+    overflow-x: hidden;
+    max-width: 600px;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
     gap: 1em;
@@ -153,7 +158,7 @@ nav {
 }
 
 .carousel__card {
-    width: 12em;
+    width: 8em;
     cursor: pointer;
     border-radius: .5em;
     overflow: hidden;
@@ -268,6 +273,40 @@ footer {
     transform: translateX(-50%);
 }
 
+
+
+/* products.html styles */
+.product__grid {
+    flex: 0;
+    flex-wrap: wrap;
+}
+
+.product {
+    width: clamp(15em, 85%, 20em);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries */
 @media only screen and (max-width: 700px) {
     .nav__links {
         flex-direction: column;
@@ -277,3 +316,5 @@ footer {
         gap: 1em;
     }
 }
+
+
