--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
 
 main {
     justify-content: center;
+    align-items: center;
 }
 
 h1 {
@@ -79,7 +80,7 @@ img {
 .flex {display: flex;}
 .column {flex-direction: column;}
 .grid {display: grid;}
-
+.hidden {display: none;}
 
 /* layout styling */
 nav {
@@ -110,6 +111,14 @@ nav {
 /* nav toggle animation */
 .hamburger__link > * {
     transition: var(--transition-time) ease-out;
+}
+
+.top__line {
+    transform-origin: bottom;
+}
+
+.bot__line {
+    transform-origin: top;
 }
 
 .navOpenTop {
@@ -277,6 +286,7 @@ footer {
 
 /* products.html styles */
 .products__container {
+    max-width: var(--max-width);
     flex-wrap: wrap;
     justify-content: center;
     gap: 1em;
@@ -287,7 +297,10 @@ footer {
     width: 10em;
     aspect-ratio: 3 / 4;
     flex-shrink: 0;
+    padding: 1em;
+    border-radius: .25em;
     border: 1px red solid;
+    background-color: white;
 }
 
 
