--- a/style.css
+++ b/style.css
@@ -61,19 +61,19 @@ p {
     font-size: .75em;
 }
 
-button {
+a {
+    font-size: 1em;
+    color: var(--clr-primary);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+button, .button {
     padding: 1em 2em;
     border: 2px solid var(--clr-primary);
     background: var(--clr-primary);
     color: white;
     border-radius: .25em;
-    cursor: pointer;
-}
-
-a {
-    font-size: 1em;
-    color: var(--clr-primary);
-    font-weight: 500;
     cursor: pointer;
 }
 
@@ -161,6 +161,7 @@ nav {
 
 .carousel__wrapper {
     overflow-x: hidden;
+    margin-block: 2em;
 }
 
 .carousel {
@@ -187,15 +188,6 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.view--products {
-    margin-block: 3em;
-    color: white;
-}
-
-.view--products > a {
-    color: white;
 }
 
 .scroll__arrow {
