--- a/style.css
+++ b/style.css
@@ -283,8 +283,14 @@ nav {
 /* carousel and wrapper */
 
 .carousel__wrapper {
-    overflow-x: hidden;
+    overflow-x: scroll;
     margin-block: 2em;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.carousel__wrapper::-webkit-scrollbar {
+    display: none;
 }
 
 .carousel {
@@ -293,7 +299,7 @@ nav {
     grid-template-rows: 1fr;
     gap: 1em;
     justify-content: center;
-    transform: translateX(0);
+    transform: translateX(100%);
     transition: transform 350ms ease-out;
 }
 
@@ -343,6 +349,9 @@ nav {
     height: 2em;
     padding: .25em;
     cursor: pointer;
+    transform: scale(1);
+    opacity: 1;
+    transition: all 350ms ease-in;
 }
 
 .scroll__arrow > svg {
@@ -350,7 +359,11 @@ nav {
 }
 
 .scroll__arrow:first-of-type {
-    transform: scaleX(-1);
+    transform: rotate(180deg);
+}
+
+.scroll__wrapper > .scroll__arrow.disabled {
+    opacity: .2;
 }
 
 /* about portion of page */
