--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h2 {
     max-width: 30ch;
     font-size: 1.25em;
     font-weight: 500;
+    user-select: none;
 }
 
 h3 {
@@ -83,6 +84,10 @@ button, .button {
     color: white;
     border-radius: .25em;
     cursor: pointer;
+    /* disabling user select of text in buttons */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 img {
@@ -568,8 +573,8 @@ footer {
     background-color: rgba(60,20,80, .4);
     transform-origin: center;
     opacity: 1;
-    transform: scale(1);
-    transition: opacity 450ms ease-out, transform 550ms ease-in-out;
+    transform: scale(1) rotate(0);
+    transition: opacity 450ms ease-out 100ms, transform 550ms ease-in-out;
 }
 
 .product__container {
@@ -618,7 +623,7 @@ footer {
 /* hiding product modal */
 .hide__product-modal {
     opacity: 0;
-    transform: scale(0);
+    transform: scale(0) rotate(40deg);
 }
 
 .modalX {
