--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 2em 2em 20em;
+    isolation: isolate;
 }
 
 h1 {
@@ -472,6 +473,7 @@ footer {
     justify-content: center;
     gap: 1em;
     padding: 1em;
+    z-index: -1;
 }
 
 .product {
@@ -482,6 +484,7 @@ footer {
     border-radius: .25em;
     background-color: white;
     transition: transform 250ms ease-in-out;
+    overflow: hidden;
 }
 
 .product > img {
@@ -492,9 +495,23 @@ footer {
     transform: scale(1.05) translate(2px, -2px);
 }
 
-.product:hover > .carousel__overlay, .product:focus-visible > .carousel__overlay {
-    transform: translateY(0);
+.product__overlay {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 20, 60, .6);
+    color: white;
+    pointer-events: none;
+    padding: .5em;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: opacity 550ms ease-out, transform 350ms ease-out;
+}
+
+.product:hover > .product__overlay, .product:focus-visible > .product__overlay {
     opacity: 1;
+    transform: translateY(0);
 }
 
 .searchbar__container {
@@ -641,6 +658,7 @@ footer {
     top: .25em;
     right: .25em;
 }
+
 
 
 
